analysis/low-level-api-fir/testData/lazyResolve/errors/constructorDuplicatedContextParameter.kt
// LANGUAGE: +ContextParameters

class Foo {
    context(c<caret>: Int)
    context(c: String)
    constructor()
}